hphp/hack/test/typecheck/constraints/bad_contra_constraint.php.legacy.exp
File "bad_contra_constraint.php", line 22, characters 21-25:
Invalid argument (Typing[4110])
File "bad_contra_constraint.php", line 13, characters 10-12:
This is a value of generic type Tb#1 from this instanceof test matching \Base<Tb#1>
File "bad_contra_constraint.php", line 5, characters 15-16:
It is incompatible with a value of generic type Td
File "bad_contra_constraint.php", line 7, characters 35-36:
  via this generic Td
File "bad_contra_constraint.php", line 7, characters 35-36:
Considering that this type argument is contravariant with respect to Base
